# BitPerfect

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
cmake/: BitPerfectConfig.cmake.in
src/: CMakeLists.txt  version.h.in
src/cli/: main.cpp
src/domain/: CMakeLists.txt
src/domain/decoder/: AudioDecoder.cpp  AudioDecoder.h  CMakeLists.txt
src/infrastructure/: CMakeLists.txt
tests/: CMakeLists.txt  test_main.cpp
tests/domain/: test_audio_decoder.cpp
项目规划/: C++编码规范.md  UI-UX原型设计.md  最终技术选型决策.md  架构设计.md  竞品调研.md  需求分析.md  项目进度.md
